--- a/index.html
+++ b/index.html
@@ -23,137 +23,7 @@
       "@type": "Physician",
       "name": "Henrique Nunes",
       "specialty": "Ostéopathie",
-
-    .osteo__all__figcaption {
-        position: initial;
-        background: red;
-        opacity: 1;
-    }
-
-    .osteo__all__figcaption__title {
-        color: black;
-    }
-    .osteo__all__figure {
-        overflow: initial;
-    }
-}
-
-@media screen and (max-width: 950px) {
-
-    .hero__wrapper__name {
-        font-size: 48px;
-    }
-
-    .hero__wrapper__location {
-        font-size: 36px;
-    }
-
-}
-
-@media screen and (max-width: 950px) {
-
-    .sect-mb {
-        margin-bottom: 50px;
-
-    }
-
-    h2 {
-        font-size: 32px;
-        line-height: 35px;
-    }
-
-    p {
-        font-size: 14px;
-    }
-
-    .hero__wrapper__link__text {
-        font-size: 14px;
-    }
-
-    .osteo {
-        width: 95%;
-        margin: 50px auto;
-    }
-
-    .osteo__intro {
-        margin-bottom: 20px;
-    }
-
-    .osteo__intro__title {
-        max-width: 645px;
-        margin: 30px auto;
-    }
-    .hero {
-        flex-direction: column;
-    }
-
-    
-    .hero__wrapper {
-        margin-top: 80px;
-        max-width: 95%;
-    }
-
-    .comfort__wrapper {
-        gap: 25px;
-        width: 95%;
-        margin: 0 auto;
-    }
-    
-    .comfort__wrapper__home {
-        flex-direction: column-reverse;
-        gap: 25px;
-    }
-
-    .flex-column {
-        flex-direction: column;
-    }
-
-    .comfort__wrapper__home__article h3 {
-        text-align: center;
-    }
-
-    .comfort__title {
-        margin-bottom: 20px;
-    }
-
-    .comfort__wrapper__home__article {
-        max-width: 95%;
-        margin: 0 auto;
-    }
-
-    .banner__wrapper {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .banner__title {
-        text-align: center;
-        font-size: 36px;
-        max-width: 385px;
-    }
-
-    .photo {
-        width: 100%;
-    }
-
-    .advice {
-        flex-direction: column;
-        width: 95%;
-        margin: 20px auto;
-    }
-
-    .footer__wrapper {
-        padding: 20px;
-        flex-direction: column;
-    }
-
-    .footer__wrapper__me {
-        gap: 20px;
-        margin-bottom: 20px;
-    }
-}
-
+      "address": {
         "@type": "33520",
         "streetAddress": "Allée de la Salamandre",
         "addressLocality": "Bruges",
@@ -176,15 +46,15 @@
     <nav class="navbar">
       <a class="navbar__link" href="index.html">Accueil</a>
       <div class="dropdown">
-  <span class="navbar__link">Ostéopathie</span>
-  <div class="dropdown-content">
-    <div class="dropdown-content__wrapper">
-      <a class="dropdown-content__wrapper__link" id="osteo-link" href="osteopathie.html">Définition</a>
-      <a class="dropdown-content__wrapper__link" id="osteo-link" href="osteopathie.html">Consultation</a>
-      <a class="dropdown-content__wrapper__link" id="osteo-link" href="osteopathie.html">Quand consulter ?</a>
-    </div>
-  </div>
-</div>
+        <span class="navbar__link">Ostéopathie</span>
+        <div class="dropdown-content">
+          <div class="dropdown-content__wrapper">
+            <a class="dropdown-content__wrapper__link" id="osteo-link" href="osteopathie.html">Définition</a>
+            <a class="dropdown-content__wrapper__link" id="osteo-link" href="osteopathie.html">Consultation</a>
+            <a class="dropdown-content__wrapper__link" id="osteo-link" href="osteopathie.html">Quand consulter ?</a>
+          </div>
+        </div>
+      </div>
       <a class="navbar__link" href="consulter.html">Quand Consulter ?</a>
       <a class="navbar__link" href="tarifs.html">Tarifs</a>
       <a class="navbar__link" href="liendoctolib">
@@ -233,7 +103,9 @@
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Enfants</h3>
               <p class="osteo__all__figcaption__desc">
-                Prévenir les troubles posturaux et favoriser une croissance harmonieuse grâce à un suivi ostéopathique. L’ostéopathie aide à corriger les déséquilibres, améliore la posture et soutient le bien-être général de votre enfant.
+                Prévenir les troubles posturaux et favoriser une croissance harmonieuse grâce à un suivi ostéopathique.
+                L’ostéopathie aide à corriger les déséquilibres, améliore la posture et soutient le bien-être général de
+                votre enfant.
               </p>
               <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
             </figcaption>
@@ -245,7 +117,9 @@
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Femmes enceintes</h3>
               <p class="osteo__all__figcaption__desc">
-                Soulager les douleurs, préparer le corps pour une grossesse harmonieuse. L'ostéopathie rééquilibre votre corps pendant la grossesse, facilite l'accouchement et soulage les douleurs postnatales, tout en soutenant le bien-être de la maman et du bébé.
+                Soulager les douleurs, préparer le corps pour une grossesse harmonieuse. L'ostéopathie rééquilibre votre
+                corps pendant la grossesse, facilite l'accouchement et soulage les douleurs postnatales, tout en
+                soutenant le bien-être de la maman et du bébé.
               </p>
               <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
             </figcaption>
@@ -257,7 +131,9 @@
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Seniors</h3>
               <p class="osteo__all__figcaption__desc">
-                Maintenir la mobilité, prévenir les douleurs articulaires et vertébrales efficacement. L'ostéopathie aide à soulager les douleurs liées à l'arthrose, les tensions musculaires et les troubles fonctionnels, tout en soutenant la santé globale.
+                Maintenir la mobilité, prévenir les douleurs articulaires et vertébrales efficacement. L'ostéopathie
+                aide à soulager les douleurs liées à l'arthrose, les tensions musculaires et les troubles fonctionnels,
+                tout en soutenant la santé globale.
               </p>
               <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
             </figcaption>
@@ -271,7 +147,9 @@
               <p class="osteo__all__figcaption__desc">
                 Optimiser les performances, prévenir et traiter les blessures liées au sport.
 
-L'ostéopathie aide à prévenir et traiter les blessures sportives comme les entorses, déchirures, et douleurs chroniques. Elle améliore la mobilité, optimise les performances et favorise la récupération après l’effort.
+                L'ostéopathie aide à prévenir et traiter les blessures sportives comme les entorses, déchirures, et
+                douleurs chroniques. Elle améliore la mobilité, optimise les performances et favorise la récupération
+                après l’effort.
               </p>
               <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
             </figcaption>
@@ -283,16 +161,21 @@ L'ostéopathie aide à prévenir et traiter les blessures sportives comme les en
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Entreprise</h3>
               <p class="osteo__all__figcaption__desc">
-                Amélioration de la productivité, du bien-être physique et psychique de vos collaborateurs. L'ostéopathie en entreprise prévient les troubles musculo-squelettiques, réduit les arrêts maladie et optimise l'ergonomie, favorisant ainsi un environnement de travail plus productif et sain.
+                Amélioration de la productivité, du bien-être physique et psychique de vos collaborateurs. L'ostéopathie
+                en entreprise prévient les troubles musculo-squelettiques, réduit les arrêts maladie et optimise
+                l'ergonomie, favorisant ainsi un environnement de travail plus productif et sain.
               </p>
               <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
             </figcaption>
           </figure>
         </div>
-        <div class="osteo__all__link osteo__all__link--services" href="">
+        <div class="osteo__all__link osteo__all__link--services">
           <h3>L'ostéopathie pour tous les profils
           </h3>
-          <p>Que vous soyez enfant, femme enceinte, senior, sportif ou en entreprise, l’ostéopathie vous aide à soulager vos douleurs, prévenir les troubles musculo-squelettiques et améliorer votre bien-être au quotidien.</p>
+          <p>Que vous soyez enfant, femme enceinte, senior ou sportif, l'ostéopathie offre des soins ciblés pour soulager les douleurs, prévenir les troubles et maintenir un équilibre optimal. Découvrez comment nos services peuvent améliorer votre bien-être quotidien.</p>
+
+          <a class="osteo__all__figcaption__link" href="">Découvrez nos services</a>
+
         </div>
       </div>
     </section>
@@ -348,7 +231,8 @@ L'ostéopathie aide à prévenir et traiter les blessures sportives comme les en
           <div class="advice__card__avatar__img"></div>
           <p>Clément Jeandet</p>
         </div>
-        <p class="advice__card__avatar__desc">“Henrique me suit et m'accompagne depuis début 2024 à travers sa double compétence d'ostéopathe et de
+        <p class="advice__card__avatar__desc">“Henrique me suit et m'accompagne depuis début 2024 à travers sa double
+          compétence d'ostéopathe et de
           préparateur physique. Souffrant de troubles posturaux sévères depuis près de 10 ans, j'ai pu retrouver
           rapidement, suffisamment de mobilité et de confiance dans mes capacités avec l'aide d'Henrique...”</p>
         <div class="advice__card__bottom">
@@ -363,7 +247,8 @@ L'ostéopathie aide à prévenir et traiter les blessures sportives comme les en
           <div class="advice__card__avatar__img"></div>
           <p>Clément Jeandet</p>
         </div>
-        <p class="advice__card__avatar__desc">“Henrique me suit et m'accompagne depuis début 2024 à travers sa double compétence d'ostéopathe et de
+        <p class="advice__card__avatar__desc">“Henrique me suit et m'accompagne depuis début 2024 à travers sa double
+          compétence d'ostéopathe et de
           préparateur physique. Souffrant de troubles posturaux sévères depuis près de 10 ans, j'ai pu retrouver
           rapidement, suffisamment de mobilité et de confiance dans mes capacités avec l'aide d'Henrique...”</p>
         <div class="advice__card__bottom">
