--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
         <div class="osteo__all__link" href="">
           <figure class="osteo__all__figure">
-            <img class="osteo__all__img" src="./assets/images/Enfants.jpg" alt="" />
+            <img class="osteo__all__img" src="./assets/images/sportifs.png" alt="" />
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Sportifs</h3>
               <p class="osteo__all__figcaption__desc">
@@ -157,7 +157,7 @@
         </div>
         <div class="osteo__all__link" href="">
           <figure class="osteo__all__figure">
-            <img class="osteo__all__img" src="./assets/images/Enfants.jpg" alt="" />
+            <img class="osteo__all__img" src="./assets/images/enterprise.jpg" alt="" />
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Entreprise</h3>
               <p class="osteo__all__figcaption__desc">
@@ -172,7 +172,7 @@
         <div class="osteo__all__link osteo__all__link--services">
           <h3>L'ostéopathie pour tous les profils
           </h3>
-          <p>Que vous soyez enfant, femme enceinte, senior ou sportif, l'ostéopathie offre des soins ciblés pour soulager les douleurs, prévenir les troubles et maintenir un équilibre optimal. Découvrez comment nos services peuvent améliorer votre bien-être quotidien.</p>
+          <p>L’ostéopathie accompagne toutes les étapes de la vie en proposant des soins personnalisés pour apaiser les douleurs, prévenir les troubles fonctionnels et maintenir votre équilibre. Prenez soin de votre bien-être au quotidien grâce à une approche adaptée à vos besoins</p>
 
           <a class="osteo__all__figcaption__link" href="">Découvrez nos services</a>
 
@@ -183,7 +183,7 @@
       <h2 class="comfort__title">Votre Bien-être : Chez Vous ou au Cabinet</h2>
       <div class="comfort__wrapper">
         <div class="comfort__wrapper__home">
-          <div class="photo"></div>
+          <img class="photo" src="assets/images/Henrique2.jpg" alt="Ostéopathe Henrique" >
           <article class="comfort__wrapper__home__article">
             <h3>Les Bienfaits d’une Séance d’Ostéopathie à Domicile sur Bordeaux et ses Alentours</h3>
             <div class="comfort_wrapper__home__article__text">
@@ -209,8 +209,8 @@
             </div>
             <button class="btn btn-light">En savoir plus</button>
           </article>
-          <div class="photo">
-          </div>
+          <img class="photo" src="assets/images/medicalStadium.jpg" alt="Ostéopathe Henrique" >
+
         </div>
 
       </div>
