--- a/consultation-osteopathie.html
+++ b/consultation-osteopathie.html
@@ -58,7 +58,7 @@
       <a class="navbar__link" href="consulter.html">Quand Consulter ?</a>
       <a class="navbar__link" href="tarifs.html">Tarifs</a>
       <a class="navbar__link" href="liendoctolib">
-        <button class="btn btn-black">Rdv en lign e</button>
+        <button class="btn btn-black">Rdv en ligne</button>
       </a>
     </nav>
   </header>
@@ -66,56 +66,46 @@
     <section class="banner banner-intro">
       <img class="banner__img" src="./assets/images/banner-osteo.jpg" alt="séance osteopathie">
       <div class="banner__wrapper">
-       <h2 class="banner__title">L’ostéopathie </h2>
+       <h2 class="banner__title">Consultation d'Ostéopathie</h2>
       </div>
     </section>
     <section class="mw-container article">
-        <p class="article__intro">L'ostéopathie est une pratique thérapeutique manuelle née vers 1870 aux États-Unis grâce au médecin Andrew Taylor Still. Introduite en France dans les années 50, elle a vu son succès grandir au fil des ans et est aujourd'hui une thérapie reconnue. Elle a été réglementée par la loi du 4 mars 2002 relative aux droits des patients et à la qualité du système de santé.</p>
-        <p><strong>💡 À savoir : Seuls les praticiens titulaires d'un diplôme délivré par un organisme agréé par le Ministère de la Santé peuvent exercer l'ostéopathie.</strong></p>
+        <p class="article__intro"> <strong>Une séance d’ostéopathie</strong> dure généralement entre <strong>45 minutes et une heure</strong>. Lors de cette consultation, l’ostéopathe prend le temps de connaître son patient et d’évaluer ses antécédents pour répondre efficacement à ses besoins.</p>
         <article class="article__wrapper">
-            <h2 class="article__wrapper__title">Les principes de l'ostéopathie</h2>
-            <p>L'ostéopathie obtient ses résultats grâce à une intervention uniquement manuelle. La caractéristique de cette thérapie, dont l'efficacité n'est plus à prouver, est de s'intéresser au corps humain comme un tout et de traiter la cause des troubles en respectant la relation entre le corps du patient et sa pensée, son psychisme. Un esprit sain dans un corps sain !  </p>
-            <img src="/assets/images/image.png" alt="" srcset="">
+            <h2 class="article__wrapper__title">L'interrogatoire</h2>
+            <p>Lors de la <strong> première séance </strong>, un <strong>entretien approfondi</strong> est réalisé, au cours duquel l'ostéopathe investigue la raison de la consultation. Cela inclut :</p>
+            <ul class="article__wrapper__list">
+              <li> <strong>Origine de la douleur</strong> (événement déclencheur, durée, mouvements douloureux).</li>
+              <li> <strong>Examen médical</strong> éventuel apporté par le patient.</li>
+              <li>Investigation de toutes les sphères du corps : <strong>neurologique, cardio-pulmonaire, digestif, uro-néphrologique.</strong></li>
+              <li>Discussion des <strong>antécédents médicaux personnels et familiaux.</strong></li>
+              <li>Évaluation de la <strong>qualité du sommeil, pratique sportive, alimentation</strong>, et du cadre de vie.</li>
+            </ul>
+            <p>Pour les <strong>séances suivantes</strong>, l'entretien se concentre sur l'évolution de la douleur.</p>
         </article>
         <article class="article__wrapper">
-          <h2 class="article__wrapper__title">Déroulement d'une séance </h2>
-          <p>Une séance chez l'ostéopathe <strong> dure entre 40 et 60 minutes</strong> et se divise en trois étapes clés :</p>
+          <h2 class="article__wrapper__title">L'examen clinique</h2>
+          <p>Si nécessaire, l'ostéopathe commence par des <strong>tests d'exclusion</strong>, visant à écarter toute pathologie qui ne relèverait pas de son domaine.</p>
+          <p>Si ces tests confirment qu'il peut poursuivre, il réalise une série de tests physiques prenant en compte <strong> l’ensemble du corps</strong>, afin <strong> d’identifier l’origine des douleurs</strong>.</p>
+        </article>
         <article class="article__wrapper">
-            <h3 class="article__wrapper__list-b">1. Anamnèse complète </h3>
-            <p>L'ostéopathe commence par un questionnement détaillé du patient :</p>
+          <h2 class="article__wrapper__title">Le traitement</h2>
+          <p>Une fois l'examen terminé, l'ostéopathe applique un traitement personnalisé, utilisant différentes techniques manuelles :</p>
             <ul class="article__wrapper__list">
-              <li>Raison de la consultation : Pourquoi le patient est-il venu ?</li>
-              <li>Antécédents médicaux : Opérations, maladies, traumatismes, etc.</li>
-              <li>Traitements en cours : Médicaments, suivi médical, etc.</li>
-            </ul>
-          </article>
+            <li><strong>Techniques structurelles</strong></li>
+            <li><strong>Techniques viscérales</strong></li>
+            <li><strong>Techniques fasciales</strong></li>
+            <li><strong>Techniques crâniennes</strong></li>
+          </ul>
+          <p>Selon les cas, plusieurs séances peuvent être nécessaires pour corriger durablement les dysfonctionnements.</p>
+        </article>
         <article class="article__wrapper">
-            <h3 class="article__wrapper__list-b">2. Tests médicaux et ostéopathiques </h3>
-            <p>L'ostéopathe réalise une série de tests pour confirmer que la pathologie peut être traitée par l'ostéopathie. </p>
-            <p>Si ce n'est pas le cas, il orientera le patient vers le professionnel de santé approprié.</p>
-            <p>Exemples de tests réalisés :</p>
+          <h2 class="article__wrapper__title">Préparer votre consultation</h2>
+          <p>Pour une consultation optimale, il est recommandé d'apporter :</p>
             <ul class="article__wrapper__list">
-              <li>Tests médicaux ou tests d'exclusion.</li>
-              <li>Tests statiques et dynamiques posturaux.</li>
-              <li>Tests ostéopathiques pour établir un diagnostic précis.</li>
-            </ul>
-          </article>
-        <article class="article__wrapper">
-            <h3 class="article__wrapper__list-b">3. Traitement ostéopathique</h3>
-            <p> L'ostéopathe utilise des techniques dites douces, adaptées à chaque patient, et basées sur les besoins spécifiques identifiés :</p>
-            <ul class="article__wrapper__list">
-              <li>Techniques structurelles et articulaires.</li>
-              <li>Techniques faciales, musculaires et crâniennes.</li>
-              <li>Techniques viscérales.</li>
-            </ul>
-            <p>Chaque traitement est personnalisé et sans douleur. </p>
-            <p>L'ostéopathe peut également donner des conseils, tels que :</p>
-            <ul class="article__wrapper__list">
-              <li>Étirements et échauffements.</li>
-              <li>Sports et exercices adaptés.</li>
-              <li>Conseils diététiques pour un rétablissement optimal..</li>
-            </ul>
-          </article>
+            <li>Vos <strong>radiographies</strong> ou derniers examens médicaux.</li>
+            <li>Pour <strong>les nourrissons et les enfants</strong>, pensez à prendre leur <strong> carnet de santé</strong>.</li>
+          </ul>
         </article>
     </section>
     
