--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         <div class="dropdown-content">
           <div class="dropdown-content__wrapper">
             <a class="dropdown-content__wrapper__link" id="osteo-link" href="osteopathie.html">Définition</a>
-            <a class="dropdown-content__wrapper__link" id="osteo-link" href="osteopathie.html">Consultation</a>
-            <a class="dropdown-content__wrapper__link" id="osteo-link" href="osteopathie.html">Quand consulter ?</a>
+            <a class="dropdown-content__wrapper__link" id="osteo-link" href="consultation-osteopathie.html">Consultation</a>
+            <a class="dropdown-content__wrapper__link" id="osteo-link" href="quand-consulter-un-osteopathe.html">Quand consulter ?</a>
+
           </div>
         </div>
       </div>
@@ -127,6 +128,17 @@
         </div>
         <div class="osteo__all__link" href="">
           <figure class="osteo__all__figure">
+            <img class="osteo__all__img" src="./assets/images/newborn.jpg" alt="" />
+            <figcaption class="osteo__all__figcaption">
+              <h3 class="osteo__all__figcaption__title">Nouveau Nés</h3>
+              <p class="osteo__all__figcaption__desc">
+                L’accouchement peut provoquer des tensions sur le crâne et le corps de votre bébé, entraînant des troubles digestifs, déformations crâniennes ou inconforts. L’ostéopathie aide à rétablir son équilibre et favorise son bien-être. Offrez à votre enfant un accompagnement doux pour bien démarrer sa vie. </p>
+              <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="osteo__all__link" href="">
+          <figure class="osteo__all__figure">
             <img class="osteo__all__img" src="./assets/images/seniors.png" alt="" />
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Seniors</h3>
@@ -169,20 +181,21 @@
             </figcaption>
           </figure>
         </div>
-        <div class="osteo__all__link osteo__all__link--services">
-          <h3>L'ostéopathie pour tous les profils
+        
+        <!-- <div class="osteo__all__link osteo__all__link--services">
+          <h3 class="osteo__all__link--services__title">L'ostéopathie pour tous les profils
           </h3>
           <p>L’ostéopathie accompagne toutes les étapes de la vie en proposant des soins personnalisés pour apaiser les douleurs, prévenir les troubles fonctionnels et maintenir votre équilibre. Prenez soin de votre bien-être au quotidien grâce à une approche adaptée à vos besoins</p>
 
           <a class="osteo__all__figcaption__link" href="">Découvrez nos services</a>
 
-        </div>
+        </div> -->
       </div>
     </section>
-    <section data-aos="fade-in" class="comfort mw-container sect-mb">
+    <section  class="comfort mw-container sect-mb">
       <h2 class="comfort__title">Votre Bien-être : Chez Vous ou au Cabinet</h2>
       <div class="comfort__wrapper">
-        <div class="comfort__wrapper__home">
+        <div data-aos="fade-up" class="comfort__wrapper__home">
           <img class="photo" src="assets/images/Henrique2.jpg" alt="Ostéopathe Henrique" >
           <article class="comfort__wrapper__home__article">
             <h3>Les Bienfaits d’une Séance d’Ostéopathie à Domicile sur Bordeaux et ses Alentours</h3>
@@ -198,7 +211,7 @@
           </article>
         </div>
 
-        <div class="comfort__wrapper__home flex-column">
+        <div data-aos="fade-up" class="comfort__wrapper__home flex-column">
           <article class="comfort__wrapper__home__article">
             <h3>Un Accueil Serein dans Notre Clinique à Mérignac</h3>
             <div class="comfort_wrapper__home__article__text">
