--- a/consultation-osteopathie.html
+++ b/consultation-osteopathie.html
@@ -55,7 +55,7 @@
           </div>
         </div>
       </div>
-      <a class="navbar__link" href="consulter.html">Quand Consulter ?</a>
+      <a class="navbar__link" href="osteopathe.html">Votre ostéopathe</a>
       <a class="navbar__link" href="tarifs.html">Tarifs</a>
       <a class="navbar__link" href="liendoctolib">
         <button class="btn btn-black">Rdv en ligne</button>
