--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </div>
         </div>
       </div>
-      <a class="navbar__link" href="consulter.html">Quand Consulter ?</a>
+      <a class="navbar__link" href="osteopathe.html">Votre ostéopathe</a>
       <a class="navbar__link" href="tarifs.html">Tarifs</a>
       <a class="navbar__link" href="liendoctolib">
         <button class="btn btn-black">Rdv en ligne</button>
@@ -108,7 +108,7 @@
                 L’ostéopathie aide à corriger les déséquilibres, améliore la posture et soutient le bien-être général de
                 votre enfant.
               </p>
-              <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
+              <a href="quand-consulter-un-osteopathe.html?#enfants" class="osteo__all__figcaption__link" href="">En savoir plus</a>
             </figcaption>
           </figure>
         </div>
@@ -122,7 +122,7 @@
                 corps pendant la grossesse, facilite l'accouchement et soulage les douleurs postnatales, tout en
                 soutenant le bien-être de la maman et du bébé.
               </p>
-              <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#femmes-enceintes">En savoir plus</a>
             </figcaption>
           </figure>
         </div>
@@ -133,7 +133,7 @@
               <h3 class="osteo__all__figcaption__title">Nouveau Nés</h3>
               <p class="osteo__all__figcaption__desc">
                 L’accouchement peut provoquer des tensions sur le crâne et le corps de votre bébé, entraînant des troubles digestifs, déformations crâniennes ou inconforts. L’ostéopathie aide à rétablir son équilibre et favorise son bien-être. Offrez à votre enfant un accompagnement doux pour bien démarrer sa vie. </p>
-              <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#nouveau-nes">En savoir plus</a>
             </figcaption>
           </figure>
         </div>
@@ -147,7 +147,7 @@
                 aide à soulager les douleurs liées à l'arthrose, les tensions musculaires et les troubles fonctionnels,
                 tout en soutenant la santé globale.
               </p>
-              <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#seniors">En savoir plus</a>
             </figcaption>
           </figure>
         </div>
@@ -163,7 +163,7 @@
                 douleurs chroniques. Elle améliore la mobilité, optimise les performances et favorise la récupération
                 après l’effort.
               </p>
-              <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#sportifs">En savoir plus</a>
             </figcaption>
           </figure>
         </div>
@@ -177,7 +177,7 @@
                 en entreprise prévient les troubles musculo-squelettiques, réduit les arrêts maladie et optimise
                 l'ergonomie, favorisant ainsi un environnement de travail plus productif et sain.
               </p>
-              <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#entreprise">En savoir plus</a>
             </figcaption>
           </figure>
         </div>
