--- a/osteopathe.html
+++ b/osteopathe.html
@@ -37,7 +37,7 @@
 
 <body>
 
-   <header data-aos="fade-in" class="header mw-container">
+  <header data-aos="fade-in" class="header mw-container">
     <div class="header__wrapper">
       <p class="header__name">Henrique Nunes</p>
       <p class="header__wrapper__job">Ostéopathe à Bruges</p>
@@ -49,8 +49,10 @@
         <div class="dropdown-content">
           <div class="dropdown-content__wrapper">
             <a class="dropdown-content__wrapper__link" id="osteo-link" href="osteopathie.html">Définition</a>
-            <a class="dropdown-content__wrapper__link" id="osteo-link" href="consultation-osteopathie.html">Consultation</a>
-            <a class="dropdown-content__wrapper__link" id="osteo-link" href="quand-consulter-un-osteopathe.html">Quand consulter ?</a>
+            <a class="dropdown-content__wrapper__link" id="osteo-link"
+              href="consultation-osteopathie.html">Consultation</a>
+            <a class="dropdown-content__wrapper__link" id="osteo-link" href="quand-consulter-un-osteopathe.html">Quand
+              consulter ?</a>
 
           </div>
         </div>
@@ -58,69 +60,85 @@
       <a class="navbar__link" href="osteopathe.html">Votre ostéopathe</a>
       <a class="navbar__link" href="tarifs.html">Tarifs</a>
       <a class="navbar__link" href="liendoctolib">
-        <button class="btn btn-black">Rdv en lign e</button>
+        <button class="btn btn-black">Rdv en ligne</button>
       </a>
     </nav>
   </header>
   <main class="">
-    <section class="banner banner-intro">
+
+    <section data-aos="fade-in" class="banner banner-intro">
       <img class="banner__img" src="./assets/images/banner-osteo.jpg" alt="séance osteopathie">
       <div class="banner__wrapper">
-       <h2 class="banner__title">L’ostéopathie </h2>
+        <h2 class="banner__title">Votre Ostéopathe</h2>
       </div>
     </section>
     <section class="mw-container article">
-      <div class="article__intro">
-        <p class="article__intro">L'ostéopathie est une pratique thérapeutique manuelle née vers 1870 aux États-Unis grâce au médecin Andrew Taylor Still. Introduite en France dans les années 50, elle a vu son succès grandir au fil des ans et est aujourd'hui une thérapie reconnue. Elle a été réglementée par la loi du 4 mars 2002 relative aux droits des patients et à la qualité du système de santé.</p>
-        <p class="article__wrapper__text"><strong>💡 À savoir : Seuls les praticiens titulaires d'un diplôme délivré par un organisme agréé par le Ministère de la Santé peuvent exercer l'ostéopathie.</strong></p>
-       </div>
-        <article class="article__wrapper">
-            <h2 class="article__wrapper__title">Les principes de l'ostéopathie</h2>
-            <p class="article__wrapper__text">L'ostéopathie obtient ses résultats grâce à une intervention uniquement manuelle. La caractéristique de cette thérapie, dont l'efficacité n'est plus à prouver, est de s'intéresser au corps humain comme un tout et de traiter la cause des troubles en respectant la relation entre le corps du patient et sa pensée, son psychisme. Un esprit sain dans un corps sain !  </p>
-            <img class="article__wrapper__img" src="/assets/images/image.png" alt="" srcset="">
-        </article>
-        <article class="article__wrapper">
-          <h2 class="article__wrapper__title">Déroulement d'une séance </h2>
-          <p class="article__wrapper__text">Une séance chez l'ostéopathe <strong> dure entre 40 et 60 minutes</strong> et se divise en trois étapes clés :</p>
-        <article class="article__wrapper">
-            <h3 class="article__wrapper__list-b">1. Anamnèse complète </h3>
-            <p class="article__wrapper__text"> <strong> L'ostéopathe</strong> commence par un <strong> questionnement détaillé du patient </strong> :</p>
-            <ul class="article__wrapper__list">
-              <li> <strong> Raison de la consultation</strong> : Pourquoi le patient est-il venu ?</li>
-              <li> <strong> Antécédents médicaux </strong>: Opérations, maladies, traumatismes, etc.</li>
-              <li> <strong> Traitements en cours</strong> : Médicaments, suivi médical, etc.</li>
-            </ul>
+      <div class="article__container">
+        <div>
+
+          <article class="article__wrapper">
+            <h2 class="article__wrapper__title">A Propos de Moi</h2>
+            <p class="article__wrapper__text">Je suis Henrique Nunes, ostéopathe avec plus de 15 ans d’expérience. Mon
+              parcours est riche et diversifié, dédié à l'amélioration du bien-être de mes patients. Mon approche est
+              centrée sur le soulagement des douleurs, l’amélioration de la mobilité et la prévention des troubles
+              musculo-squelettiques, grâce à des techniques ostéopathiques adaptées à chaque individu.</p>
           </article>
-        <article class="article__wrapper">
-            <h3 class="article__wrapper__list-b">2. Tests médicaux et ostéopathiques </h3>
-            <p ><strong>L'ostéopathe</strong>  réalise une série de tests pour confirmer que la pathologie peut être traitée par l'ostéopathie. </p>
-            <p class="article__wrapper__text">Si ce n'est pas le cas, il orientera le patient vers le professionnel de santé approprié.</p>
-            <p class="article__wrapper__text">Exemples de tests réalisés :</p>
-            <ul class="article__wrapper__list">
-              <li><strong> Tests médicaux </strong> ou  <strong>tests d'exclusion</strong>.</li>
-              <li><strong> Tests statiques</strong> et  <strong> dynamiques posturaux</strong>.</li>
-              <li><strong> Tests ostéopathiques</strong> pour établir un <strong>diagnostic précis</strong>.</li>
-            </ul>
+          <article class="article__wrapper">
+            <h2 class="article__wrapper__title">Parcours Professionnel</h2>
+            <p class="article__wrapper__text">Diplômé en ostéopathie, j'ai acquis plus de 15 ans d'expérience en
+              travaillant avec divers publics, y compris des athlètes de haut niveau, des enfants, des adultes et des
+              seniors. J’ai également travaillé avec divers clubs sportifs de haut niveau (Tremblay-en-France Handball,
+              MLV Basket, Torcy Football, INSEP, JSA Bordeaux, CDHN) et assuré des consultations en cabinet ainsi qu’à
+              domicile. Mon parcours inclut aussi de la formation en entreprise sur la prévention des troubles liés à
+              l'inactivité physique avec Atid Consulting, enrichissant ainsi mon approche clinique.</p>
+            <p class="article__wrapper__text">En tant qu'enseignant chez Eurosteo (École d'ostéopathie pour
+              professionnels de santé), je suis l'évolution et l'actualité en traumatologie du sport et en prévention
+              des blessures.</p>
           </article>
-        <article class="article__wrapper">
-            <h3 class="article__wrapper__list-b">3. Traitement ostéopathique</h3>
-            <p class="article__wrapper__text"> <strong>L'ostéopathe</strong> utilise des techniques dites douces, adaptées à chaque patient, et basées sur les besoins spécifiques identifiés :</p>
-            <ul class="article__wrapper__list">
-              <li><strong>Techniques structurelles</strong> et <strong>articulaires</strong>.</li>
-              <li><strong>Techniques faciales</strong>, musculaires et crâniennes.</li>
-              <li><strong>Techniques viscérales</strong>.</li>
-            </ul>
-            <p class="article__wrapper__text">Chaque traitement est <strong> personnalisé et sans douleur</strong>. </p>
-            <p class="article__wrapper__text">L'ostéopathe peut également donner des conseils, tels que :</p>
-            <ul class="article__wrapper__list">
-              <li><strong>Étirements</strong> et <strong>échauffements</strong>.</li>
-              <li><strong>Sports</strong> et <strong>exercices adaptés</strong>.</li>
-              <li><strong>Conseils diététiques</strong> pour un rétablissement optimal..</li>
-            </ul>
-          </article>
-        </article>
+        </div>
+        <img class="article__wrapper__img" src="./assets/images/osteo1.jpg" alt="" srcset="">
+      </div>
+
+      <article class="article__wrapper">
+        <h2 class="article__wrapper__title">Mes Compétences</h2>
+        <p class="article__wrapper__text">Je mets à votre disposition une large gamme de compétences :</p>
+        <ul class="article__wrapper__list">
+          <li><strong>Traitement des douleurs chroniques et aiguës</strong> : dos, articulations, migraines, troubles digestifs, etc.
+          </li>
+          <li><strong>Suivi des sportifs</strong> : prévention des blessures, amélioration des performances, récupération rapide.</li>
+          <li><strong>Accompagnement des femmes enceintes et des nourrissons</strong> : suivi de la grossesse, post-partum, coliques du
+            nourrisson.</li>
+          <li><strong>Gestion du stress et des tensions</strong> : techniques de relaxation et d’équilibrage du système nerveux.</li>
+        </ul>
+      </article>
+
+      <article class="article__wrapper">
+        <h2 class="article__wrapper__title">Expertise en Sport et Préparation Physique</h2>
+        <p class="article__wrapper__text">En tant qu'ostéopathe du sport et préparateur physique, j'accompagne les athlètes et les patients en quête de bien-être physique. Ma méthode est axée sur :</p>
+        <ul class="article__wrapper__list">
+          <li><strong>L’optimisation des performances</strong></li>
+          <li><strong>La prévention des blessures</strong></li>
+          <li><strong>Le rétablissement rapide et complet</strong> grâce à des techniques ostéopathiques spécialisées</li>
+        </ul>
+      </article>
+
+      <article class="article__wrapper">
+        <h2 class="article__wrapper__title">Approche Holistique</h2>
+        <p class="article__wrapper__text">Je combine mes compétences pour offrir une prise en charge globale et personnalisée. J'utilise des techniques manuelles adaptées pour :</p>
+        <ul class="article__wrapper__list">
+          <li><strong>Restaurer la mobilité des tissus</strong></li>
+          <li><strong>Améliorer la posture</strong></li>
+          <li><strong>Soulager durablement les douleurst</strong> grâce à des techniques ostéopathiques spécialisées</li>
+        </ul>
+      </article>
+
+ <article class="article__wrapper">
+        <h2 class="article__wrapper__title">Collaboration avec des Clubs Sportifs</h2>
+        <img src="./assets/images/clubs.png" alt="" srcset="">
+      </article>
+
     </section>
-    
+
 
     <section class="banner">
       <img class="banner__img" src="/assets/images/banner.jpg" alt="séance osteopathie">
@@ -129,6 +147,7 @@
         <button class="btn btn-light btn-xl">Prendre rendez-vous</button>
       </div>
     </section>
+
   </main>
   <footer class="footer">
     <section class="footer__wrapper mw-container">
@@ -150,18 +169,24 @@
         <section class="content-consultation">
           <p class="article__wrapper__text"> <span class="content-consultation__day">Horaires :</span></p>
           <div>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>14:00 - 20h00</span></p>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Mardi</span> <span>9:30 - 15h30</span></p>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Vendredi</span> <span>9:30 - 19h30</span></p>
+            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>14:00 -
+                20h00</span></p>
+            <p class="article__wrapper__text"><span class="content-consultation__day">Mardi</span> <span>9:30 -
+                15h30</span></p>
+            <p class="article__wrapper__text"><span class="content-consultation__day">Vendredi</span> <span>9:30 -
+                19h30</span></p>
           </div>
         </section>
         <section class="content-medical close">
-          <p class="article__wrapper__text"> <span class="content-consultation__day">Adresse :</span> <span>8 Rue Georges Nègrevergne, 33700 Mérignac
+          <p class="article__wrapper__text"> <span class="content-consultation__day">Adresse :</span> <span>8 Rue
+              Georges Nègrevergne, 33700 Mérignac
             </span></p>
           <p class="article__wrapper__text"> <span class="content-consultation__day">Horaires :</span></p>
           <div>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>9h30 - 13h00</span></p>
-            <p class="article__wrapper__text"><span class="content-consultation__day">Jeudi</span> <span>9h30 - 14h30, 16h00 - 20h00</span></p>
+            <p class="article__wrapper__text"><span class="content-consultation__day">Lundi</span> <span>9h30 -
+                13h00</span></p>
+            <p class="article__wrapper__text"><span class="content-consultation__day">Jeudi</span> <span>9h30 - 14h30,
+                16h00 - 20h00</span></p>
           </div>
         </section>
       </article>
