--- a/osteopathe.html
+++ b/osteopathe.html
@@ -141,7 +141,7 @@
 
 
     <section class="banner">
-      <img class="banner__img" src="/assets/images/banner.jpg" alt="séance osteopathie">
+      <img class="banner__img" src="./assets/images/banner.jpg" alt="séance osteopathie">
       <div class="banner__wrapper">
         <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
         <button class="btn btn-light btn-xl">Prendre rendez-vous</button>
