--- a/quand-consulter-un-osteopathe.html
+++ b/quand-consulter-un-osteopathe.html
@@ -119,7 +119,7 @@
               </ul>
             </article>
           </div>
-          <img data-aos="fade-left" class="article__wrapper__img" src="/assets/images/enfants2.jpg" alt="Enfants">
+          <img data-aos="fade-left" class="article__wrapper__img" src="./assets/images/enfants2.jpg" alt="Enfants">
         </div>
       </article>
       <article data-aos="fade-in" id="femmes-enceintes" class="article__wrapper">
@@ -203,7 +203,7 @@
                 </strong> et des lombaires. Une consultation d'ostéopathie peut alors être bénéfique.</p>
             </article>
           </div>
-          <img data-aos="fade-left" src="/assets/images/femmes-enc2.jpg" alt="" srcset="">
+          <img data-aos="fade-left" src="./assets/images/femmes-enc2.jpg" alt="" srcset="">
         </div>
 
       </article>
@@ -314,7 +314,7 @@
               </ul>
             </article>
           </div>
-          <img class="article__wrapper__img article__wrapper__imgb" data-aos="fade-left" src="/assets/images/oldmen.jpg" alt="">
+          <img class="article__wrapper__img article__wrapper__imgb" data-aos="fade-left" src="./assets/images/oldmen.jpg" alt="">
 
         </div>
 
@@ -388,7 +388,7 @@
 
 
     <section class="banner">
-      <img class="banner__img" src="/assets/images/banner.jpg" alt="séance osteopathie">
+      <img class="banner__img" src="./assets/images/banner.jpg" alt="séance osteopathie">
       <div class="banner__wrapper">
         <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
         <button class="btn btn-light btn-xl">Prendre rendez-vous</button>
