--- a/osteopathie.html
+++ b/osteopathie.html
@@ -77,7 +77,7 @@
         <article class="article__wrapper">
             <h2 class="article__wrapper__title">Les principes de l'ostéopathie</h2>
             <p class="article__wrapper__text">L'ostéopathie obtient ses résultats grâce à une intervention uniquement manuelle. La caractéristique de cette thérapie, dont l'efficacité n'est plus à prouver, est de s'intéresser au corps humain comme un tout et de traiter la cause des troubles en respectant la relation entre le corps du patient et sa pensée, son psychisme. Un esprit sain dans un corps sain !  </p>
-            <img class="article__wrapper__img" src="/assets/images/image.png" alt="" srcset="">
+            <img class="article__wrapper__img" src="./assets/images/image.png" alt="" srcset="">
         </article>
         <article class="article__wrapper">
           <h2 class="article__wrapper__title">Déroulement d'une séance </h2>
@@ -123,7 +123,7 @@
     
 
     <section class="banner">
-      <img class="banner__img" src="/assets/images/banner.jpg" alt="séance osteopathie">
+      <img class="banner__img" src="./assets/images/banner.jpg" alt="séance osteopathie">
       <div class="banner__wrapper">
         <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
         <button class="btn btn-light btn-xl">Prendre rendez-vous</button>
