--- a/quand-consulter-un-osteopathe.html
+++ b/quand-consulter-un-osteopathe.html
@@ -107,7 +107,7 @@
 
             </article>
             <article>
-              <h3 class="article__wrapper__list-b"><strong>Quand solliciter une consultation ?</strong></h3>
+              <h3 class="article__wrapper__list-b">Quand solliciter une consultation ?</h3>
               <p class="article__wrapper__text"><strong>Il est conseillé</strong> de consulter un ostéopathe dans les
                 situations suivantes :</p>
               <ul class="article__wrapper__list">
