continue page html

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         <div class="dropdown-content">
           <div class="dropdown-content__wrapper">
             <a class="dropdown-content__wrapper__link" id="osteo-link" href="osteopathie.html">Définition</a>
-            <a class="dropdown-content__wrapper__link" id="osteo-link" href="consultation-osteopathie.html">Consultation</a>
-            <a class="dropdown-content__wrapper__link" id="osteo-link" href="quand-consulter-un-osteopathe.html">Quand consulter ?</a>
+            <a class="dropdown-content__wrapper__link" id="osteo-link"
+              href="consultation-osteopathie.html">Consultation</a>
+            <a class="dropdown-content__wrapper__link" id="osteo-link" href="quand-consulter-un-osteopathe.html">Quand
+              consulter ?</a>
 
           </div>
         </div>
@@ -108,7 +110,8 @@
                 L’ostéopathie aide à corriger les déséquilibres, améliore la posture et soutient le bien-être général de
                 votre enfant.
               </p>
-              <a href="quand-consulter-un-osteopathe.html?#enfants" class="osteo__all__figcaption__link" href="">En savoir plus</a>
+              <a href="quand-consulter-un-osteopathe.html?#enfants" class="osteo__all__figcaption__link" href="">En
+                savoir plus</a>
             </figcaption>
           </figure>
         </div>
@@ -122,7 +125,8 @@
                 corps pendant la grossesse, facilite l'accouchement et soulage les douleurs postnatales, tout en
                 soutenant le bien-être de la maman et du bébé.
               </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#femmes-enceintes">En savoir plus</a>
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#femmes-enceintes">En
+                savoir plus</a>
             </figcaption>
           </figure>
         </div>
@@ -132,8 +136,11 @@
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Nouveau Nés</h3>
               <p class="osteo__all__figcaption__desc">
-                L’accouchement peut provoquer des tensions sur le crâne et le corps de votre bébé, entraînant des troubles digestifs, déformations crâniennes ou inconforts. L’ostéopathie aide à rétablir son équilibre et favorise son bien-être. Offrez à votre enfant un accompagnement doux pour bien démarrer sa vie. </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#nouveau-nes">En savoir plus</a>
+                L’accouchement peut provoquer des tensions sur le crâne et le corps de votre bébé, entraînant des
+                troubles digestifs, déformations crâniennes ou inconforts. L’ostéopathie aide à rétablir son équilibre
+                et favorise son bien-être. Offrez à votre enfant un accompagnement doux pour bien démarrer sa vie. </p>
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#nouveau-nes">En savoir
+                plus</a>
             </figcaption>
           </figure>
         </div>
@@ -147,7 +154,8 @@
                 aide à soulager les douleurs liées à l'arthrose, les tensions musculaires et les troubles fonctionnels,
                 tout en soutenant la santé globale.
               </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#seniors">En savoir plus</a>
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#seniors">En savoir
+                plus</a>
             </figcaption>
           </figure>
         </div>
@@ -163,7 +171,8 @@
                 douleurs chroniques. Elle améliore la mobilité, optimise les performances et favorise la récupération
                 après l’effort.
               </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#sportifs">En savoir plus</a>
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#sportifs">En savoir
+                plus</a>
             </figcaption>
           </figure>
         </div>
@@ -177,11 +186,12 @@
                 en entreprise prévient les troubles musculo-squelettiques, réduit les arrêts maladie et optimise
                 l'ergonomie, favorisant ainsi un environnement de travail plus productif et sain.
               </p>
-              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#entreprise">En savoir plus</a>
+              <a class="osteo__all__figcaption__link" href="quand-consulter-un-osteopathe.html?#entreprise">En savoir
+                plus</a>
             </figcaption>
           </figure>
         </div>
-        
+
         <!-- <div class="osteo__all__link osteo__all__link--services">
           <h3 class="osteo__all__link--services__title">L'ostéopathie pour tous les profils
           </h3>
@@ -192,11 +202,11 @@
         </div> -->
       </div>
     </section>
-    <section  class="comfort mw-container sect-mb">
+    <section class="comfort mw-container sect-mb">
       <h2 class="comfort__title">Votre Bien-être : Chez Vous ou au Cabinet</h2>
       <div class="comfort__wrapper">
         <div data-aos="fade-up" class="comfort__wrapper__home">
-          <img class="photo" src="assets/images/Henrique2.jpg" alt="Ostéopathe Henrique" >
+          <img class="photo" src="assets/images/Henrique2.jpg" alt="Ostéopathe Henrique">
           <article class="comfort__wrapper__home__article">
             <h3>Les Bienfaits d’une Séance d’Ostéopathie à Domicile sur Bordeaux et ses Alentours</h3>
             <div class="comfort_wrapper__home__article__text">
@@ -207,7 +217,9 @@
                 chez vous, avec tout le matériel nécessaire pour assurer une séance de qualité dans le calme et la
                 sécurité de votre espace personnel.</p>
             </div>
-            <button class="btn btn-light">En savoir plus</button>
+            <a href="consultation-osteopathie.html">
+              <button class="btn btn-light">En savoir plus</button>
+            </a>
           </article>
         </div>
 
@@ -220,12 +232,12 @@
                 d'ostéopathie de qualité, dans un cadre professionnel et confortable. Faites l'expérience d'un soin
                 personnalisé, adapté à vos besoins, pour soulager vos douleurs et améliorer votre mobilité.</p>
             </div>
-            <button class="btn btn-light">En savoir plus</button>
-          </article>
-          <img class="photo" src="assets/images/medicalStadium.jpg" alt="Ostéopathe Henrique" >
+            <a href="consultation-osteopathie.html">
+              <button class="btn btn-light">En savoir plus</button>
+            </a>          </article>
+          <img class="photo" src="assets/images/medicalStadium.jpg" alt="Ostéopathe Henrique">
 
         </div>
-
       </div>
     </section>
 
@@ -235,6 +247,7 @@
         <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
         <button class="btn btn-light btn-xl">Prendre rendez-vous</button>
       </div>
+      </article>
     </section>
 
     <section class="advice sect-mb mw-container">
