--- a/osteopathie.html
+++ b/osteopathie.html
@@ -64,19 +64,19 @@
   </header>
   <main class="">
     <section class="banner banner-intro">
-      <img class="banner__img" src="./assets/images/banner-osteo.jpg" alt="séance osteopathie">
+      <img class="banner__img" src="./assets/images/bannerosteo.png" alt="séance osteopathie">
       <div class="banner__wrapper">
        <h2 class="banner__title">L’ostéopathie </h2>
       </div>
     </section>
     <section class="mw-container article">
       <div class="article__intro">
-        <p class="article__intro">L'ostéopathie est une pratique thérapeutique manuelle née vers 1870 aux États-Unis grâce au médecin Andrew Taylor Still. Introduite en France dans les années 50, elle a vu son succès grandir au fil des ans et est aujourd'hui une thérapie reconnue. Elle a été réglementée par la loi du 4 mars 2002 relative aux droits des patients et à la qualité du système de santé.</p>
+        <p class="article__intro"><strong>L'ostéopathie</strong> est une pratique thérapeutique <strong>manuelle</strong> née vers <strong>1870</strong> aux <strong>États-Unis</strong> grâce au médecin <strong>Andrew Taylor Still</strong>. Introduite en <strong>France</strong> dans les années 50, elle a vu son succès grandir au fil des ans et est aujourd'hui une <strong>thérapie reconnue</strong>. Elle a été <strong>réglementée</strong> par la loi du <strong>4 mars 2002</strong> relative aux <strong>droits des patients</strong> et à la <strong>qualité du système de santé</strong.</p>
         <p class="article__wrapper__text"><strong>💡 À savoir : Seuls les praticiens titulaires d'un diplôme délivré par un organisme agréé par le Ministère de la Santé peuvent exercer l'ostéopathie.</strong></p>
        </div>
         <article class="article__wrapper">
             <h2 class="article__wrapper__title">Les principes de l'ostéopathie</h2>
-            <p class="article__wrapper__text">L'ostéopathie obtient ses résultats grâce à une intervention uniquement manuelle. La caractéristique de cette thérapie, dont l'efficacité n'est plus à prouver, est de s'intéresser au corps humain comme un tout et de traiter la cause des troubles en respectant la relation entre le corps du patient et sa pensée, son psychisme. Un esprit sain dans un corps sain !  </p>
+            <p class="article__wrapper__text"><strong>L'ostéopathie</strong> obtient ses résultats grâce à une intervention uniquement <strong>manuelle</strong>. La caractéristique de cette thérapie, dont <strong>l'efficacité</strong> n'est plus à prouver, est de s'intéresser au <strong>corps humain</strong> comme un tout et de traiter la <strong>cause des troubles</strong> en respectant la relation entre le <strong>corps du patient</strong> et sa <strong>pensée</strong>, son <strong>psychisme</strong>. Un <strong>esprit sain</strong> dans un <strong>corps sain</strong> !  </p>
             <img class="article__wrapper__img" src="./assets/images/image.png" alt="" srcset="">
         </article>
         <article class="article__wrapper">
