--- a/osteopathe.html
+++ b/osteopathe.html
@@ -67,79 +67,69 @@
   <main class="">
 
     <section data-aos="fade-in" class="banner banner-intro">
-      <img class="banner__img" src="./assets/images/banner-osteo.jpg" alt="séance osteopathie">
+      <img class="banner__img" src="./assets/images/bannerTeam.jpg" alt="séance ostéopathie">
       <div class="banner__wrapper">
         <h2 class="banner__title">Votre Ostéopathe</h2>
       </div>
     </section>
+  
     <section class="mw-container article">
       <div class="article__container">
         <div>
-
+  
           <article class="article__wrapper">
             <h2 class="article__wrapper__title">A Propos de Moi</h2>
-            <p class="article__wrapper__text">Je suis Henrique Nunes, ostéopathe avec plus de 15 ans d’expérience. Mon
-              parcours est riche et diversifié, dédié à l'amélioration du bien-être de mes patients. Mon approche est
-              centrée sur le soulagement des douleurs, l’amélioration de la mobilité et la prévention des troubles
-              musculo-squelettiques, grâce à des techniques ostéopathiques adaptées à chaque individu.</p>
+            <p class="article__wrapper__text">Je suis <strong>Henrique Nunes</strong>, ostéopathe avec plus de <strong>15 ans d’expérience</strong>. Mon parcours est riche et diversifié, dédié à l'amélioration du <strong>bien-être</strong> de mes patients. Mon approche est centrée sur le <strong>soulagement des douleurs</strong>, l’<strong>amélioration de la mobilité</strong> et la <strong>prévention des troubles musculo-squelettiques</strong>, grâce à des <strong>techniques ostéopathiques adaptées</strong> à chaque individu.</p>
           </article>
+  
           <article class="article__wrapper">
             <h2 class="article__wrapper__title">Parcours Professionnel</h2>
-            <p class="article__wrapper__text">Diplômé en ostéopathie, j'ai acquis plus de 15 ans d'expérience en
-              travaillant avec divers publics, y compris des athlètes de haut niveau, des enfants, des adultes et des
-              seniors. J’ai également travaillé avec divers clubs sportifs de haut niveau (Tremblay-en-France Handball,
-              MLV Basket, Torcy Football, INSEP, JSA Bordeaux, CDHN) et assuré des consultations en cabinet ainsi qu’à
-              domicile. Mon parcours inclut aussi de la formation en entreprise sur la prévention des troubles liés à
-              l'inactivité physique avec Atid Consulting, enrichissant ainsi mon approche clinique.</p>
-            <p class="article__wrapper__text">En tant qu'enseignant chez Eurosteo (École d'ostéopathie pour
-              professionnels de santé), je suis l'évolution et l'actualité en traumatologie du sport et en prévention
-              des blessures.</p>
+            <p class="article__wrapper__text">Diplômé en <strong>ostéopathie</strong>, j'ai acquis plus de <strong>15 ans d'expérience</strong> en travaillant avec divers publics, y compris des <strong>athlètes de haut niveau</strong>, des <strong>enfants</strong>, des <strong>adultes</strong> et des <strong>seniors</strong>. J’ai également travaillé avec divers <strong>clubs sportifs de haut niveau</strong> (Tremblay-en-France Handball, MLV Basket, Torcy Football, INSEP, JSA Bordeaux, CDHN) et assuré des consultations en <strong>cabinet</strong> ainsi qu’à <strong>domicile</strong>. Mon parcours inclut aussi de la formation en <strong>entreprise</strong> sur la <strong>prévention des troubles</strong> liés à l'inactivité physique avec <strong>Atid Consulting</strong>, enrichissant ainsi mon approche clinique.</p>
+            <p class="article__wrapper__text">En tant qu'enseignant chez <strong>Eurosteo</strong> (École d'ostéopathie pour professionnels de santé), je suis l'évolution et l'actualité en <strong>traumatologie du sport</strong> et en <strong>prévention des blessures</strong>.</p>
           </article>
         </div>
         <img class="article__wrapper__img" src="./assets/images/osteo1.jpg" alt="" srcset="">
       </div>
-
+  
       <article class="article__wrapper">
         <h2 class="article__wrapper__title">Mes Compétences</h2>
-        <p class="article__wrapper__text">Je mets à votre disposition une large gamme de compétences :</p>
+        <p class="article__wrapper__text">Je mets à votre disposition une large gamme de <strong>compétences</strong> :</p>
         <ul class="article__wrapper__list">
-          <li><strong>Traitement des douleurs chroniques et aiguës</strong> : dos, articulations, migraines, troubles digestifs, etc.
-          </li>
+          <li><strong>Traitement des douleurs chroniques et aiguës</strong> : dos, articulations, migraines, troubles digestifs, etc.</li>
           <li><strong>Suivi des sportifs</strong> : prévention des blessures, amélioration des performances, récupération rapide.</li>
-          <li><strong>Accompagnement des femmes enceintes et des nourrissons</strong> : suivi de la grossesse, post-partum, coliques du
-            nourrisson.</li>
+          <li><strong>Accompagnement des femmes enceintes et des nourrissons</strong> : suivi de la grossesse, post-partum, coliques du nourrisson.</li>
           <li><strong>Gestion du stress et des tensions</strong> : techniques de relaxation et d’équilibrage du système nerveux.</li>
         </ul>
       </article>
-
+  
       <article class="article__wrapper">
         <h2 class="article__wrapper__title">Expertise en Sport et Préparation Physique</h2>
-        <p class="article__wrapper__text">En tant qu'ostéopathe du sport et préparateur physique, j'accompagne les athlètes et les patients en quête de bien-être physique. Ma méthode est axée sur :</p>
+        <p class="article__wrapper__text">En tant qu'<strong>ostéopathe du sport</strong> et <strong>préparateur physique</strong>, j'accompagne les <strong>athlètes</strong> et les patients en quête de <strong>bien-être physique</strong>. </p>
+        <p>Ma méthode est axée sur :</p>
         <ul class="article__wrapper__list">
           <li><strong>L’optimisation des performances</strong></li>
           <li><strong>La prévention des blessures</strong></li>
           <li><strong>Le rétablissement rapide et complet</strong> grâce à des techniques ostéopathiques spécialisées</li>
         </ul>
       </article>
-
+  
       <article class="article__wrapper">
         <h2 class="article__wrapper__title">Approche Holistique</h2>
-        <p class="article__wrapper__text">Je combine mes compétences pour offrir une prise en charge globale et personnalisée. J'utilise des techniques manuelles adaptées pour :</p>
+        <p class="article__wrapper__text">Je combine mes compétences pour offrir une <strong>prise en charge globale et personnalisée</strong>. J'utilise des <strong>techniques manuelles adaptées</strong> pour :</p>
         <ul class="article__wrapper__list">
           <li><strong>Restaurer la mobilité des tissus</strong></li>
           <li><strong>Améliorer la posture</strong></li>
-          <li><strong>Soulager durablement les douleurst</strong> grâce à des techniques ostéopathiques spécialisées</li>
+          <li><strong>Soulager durablement les douleurs</strong> grâce à des techniques ostéopathiques spécialisées</li>
         </ul>
       </article>
-
- <article class="article__wrapper">
+  
+      <article class="article__wrapper">
         <h2 class="article__wrapper__title">Collaboration avec des Clubs Sportifs</h2>
         <img src="./assets/images/clubs.png" alt="" srcset="">
       </article>
-
+  
     </section>
-
-
+  
     <section class="banner">
       <img class="banner__img" src="./assets/images/banner.jpg" alt="séance osteopathie">
       <div class="banner__wrapper">
@@ -147,8 +137,9 @@
         <button class="btn btn-light btn-xl">Prendre rendez-vous</button>
       </div>
     </section>
-
+  
   </main>
+  
   <footer class="footer">
     <section class="footer__wrapper mw-container">
       <article class="footer__wrapper__me">
